# othello-engine-grpc

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GameState.hpp  Othello_Rules.hpp  README.Docker.md  README.md  compile_flags.txt  compose.yaml  justfile
include/othello/: Constants.hpp  Controller.hpp  Engine.hpp  Evaluator.hpp  GameBoard.hpp  GameState.hpp  OthelloRules.hpp
include/othello/evaluator/: Evaluator.hpp
include/utils/: BitboardUtils.hpp  Profiler.hpp  ThreadPool.hpp  Visualize.hpp
proto/: engine.proto
src/: Constants.hpp  Controller.cpp  Engine.cpp  GameBoard.cpp  GameBoard.hpp  MobilityEvaluator.cpp  OthelloRules.cpp  OthelloRules.hpp  PositionalEvaluator.cpp  benchmark.cpp  main.cpp  server.cpp
src/utils/: ThreadPool.cpp  Visualize.cpp  Visualize.hpp
tests/: CMakeLists.txt  test_OthelloRules.cpp
web/: app.js  index.html  server.mjs  styles.css
